# daedalus

./: .dockerignore  .gitignore  .gitmodules  .gitpod.yml  CHANGELOG.md  DEVELOPER.rst  Dockerfile  Makefile  README-standalone-packaging.txt  README.rst  cabal.project  cabal.project.local  daedalus.cabal  data-message.ddl  run-backend-tests  run-benchmarks  run-test  test-hs-comp  test.ddl  test.test
cabal-pack/: README  cabal-pack.cabal
cabal-pack/app/: Main.hs
daedalus-core/: CHANGELOG.md  daedalus-core.cabal
daedalus-core/docs/: Makefile  core.tex  macro.tex
daedalus-core/src/Daedalus/: Core.hs
daedalus-debug/: daedalus-debug.cabal
daedalus-debug/src/: Main.hs
daedalus-debug/ui/: scope.js  tree.js  view.html  view.js
daedalus-language-server/: CHANGELOG.md  README  cabal.project  daedalus-language-server.cabal  server-wrapper.sh
daedalus-language-server/app/: CommandLine.hs  Main.hs
daedalus-language-server/nvim/ftdetect/: daedalus.vim
daedalus-utils/: CHANGELOG.md  daedalus-utils.cabal
daedalus-utils/src/Daedalus/: BDD.hs  Compat.hs  GUID.hs  PP.hs  Panic.hs  Range.hs  Rec.hs  SourceRange.hs  TH.hs  Time.hs
daedalus-value/: CHANGELOG.md  daedalus-value.cabal
daedalus-value/src/Daedalus/: Value.hs
daedalus-vm/: .ghcid  CHANGELOG.md  daedalus-vm.cabal  mutable.txt
daedalus-vm/src/Daedalus/: VM.hs
dex/: dex.cabal
dex/app/: AST.hs  Check.hs  ExportCPP.hs  Lexer.x  Main.hs  Monad.hs  Options.hs  Parser.y  Quote.hs  Subst.hs  Type.hs
dex/lib/: CPP.dex
dex/tests/json/: CPP.dex  Daedalus.ddl  Makefile  json.dex  simple_app.cpp
dex/tests/regression/: Makefile  README.md  TestSuite.hs  run-tests.sh
dex/tests/validation-errors/: 01-undefined-name.dex  01-undefined-name.dex.expected  02-multiple-definitions.dex  02-multiple-definitions.dex.expected  03-malformed-type-wrong-value-args.dex  03-malformed-type-wrong-value-args.dex.expected  04-malformed-type-wrong-size-args.dex  04-malformed-type-wrong-size-args.dex.expected  05-tparam-shadow-builtin.dex  05-tparam-shadow-builtin.dex.expected  06-unused-tparam.dex  06-unused-tparam.dex.expected  07-already-exported.dex  07-already-exported.dex.expected  08-invalid-selector.dex  08-invalid-selector.dex.expected  09-default-with-params.dex  10-malformed-exporter.dex  (+28 more)
exe/hs-template/: Main.hs  template.cabal
export/: CHANGELOG.md  export.cabal
export/app/: AST.hs  Check.hs  Exp.hs  ExportCPP.hs  Lexer.x  Main.hs  Name.hs  Options.hs  Parser.y  Quote.hs  Renamer.hs  Subst.hs  Type.hs
export/tests/: Makefile  json.export  simple.ddl  simple.export  simple_app.cpp  simple_parser.ddl
formats/icc/: .gitignore  README.md  Setup.hs  icc-tools.cabal
hs-gen/: CHANGELOG.md  README  hs-gen.cabal
hs-gen/src/: AST.hs  PP.hs
icc-driver/: .gitignore  CHANGELOG.md  Makefile  Setup.hs  icc-driver.cabal
icc-driver/specs/: GetVersion.ddl  ICC.ddl
icc-driver/src/: Generator.hs  ICC.hs  Main.hs
icc-tools/: Setup.hs  icc-tools.cabal
icc-tools/exe/: Main.hs
icc-tools/spec/: ICC.ddl  Validator.ddl
icc-tools/src/: PP.hs
pdf-cos/: Setup.hs  pdf-cos.cabal
pdf-cos/c++/: CMakeLists.txt  Makefile  README.md
pdf-cos/generator/: Main.hs
pdf-cos/scripts/: build
pdf-cos/spec/: Array.ddl  CIDFont.ddl  CMap.ddl  ColourSpaceOps.ddl  ContentStreamLight.ddl  Debug.ddl  Encoding.ddl  FontCommon.ddl  FontDesc.ddl  FontDict.ddl  GenPdfValue.ddl  Glyph.ddl  GlyphEnc.ddl  GlyphList.ddl  GlyphList1.ddl  GlyphListNewFonts.ddl  Glyphs.ddl  GraphicsStateOps.ddl  Harness.ddl  ISOCodes.ddl  Jpeg.ddl  JpegBasics.ddl  MacEncoding.ddl  Map.ddl  MarkedContentOps.ddl  Maybe.ddl  Page.ddl  PageTreeNode.ddl  Pair.ddl  PdfCos.ddl  PdfCrypto.ddl  PdfDecl.ddl  PdfDeclStubs.ddl  PdfExtractText.ddl  PdfText.ddl  PdfValue.ddl  PdfXRef.ddl  ResourceDict.ddl  StandardEncodings.ddl  StdEncoding.ddl  (+26 more)
pdf-cos/src/: .gitignore  IncUpdates.hs  PdfCrypto.hs  PdfDecl.hs  PdfDemo.hs  PdfMonad.hs  PdfPP.hs  PdfValue.hs  PdfXRef.hs  Possibly.hs  XRef.hs
pdf-dom/: .gitignore  cabal.project  pdf-dom.cabal
pdf-dom/csv/: 3DAnimationStyle.csv  3DLightningScheme.csv  3DMeasureLD3.csv  3DMeasurePD3.csv  3DNode.csv  3DRenderMode.csv  3DUnits.csv  3DView.csv  ActionECMAScript.csv  ActionGoTo3DView.csv  ActionGoToDp.csv  ActionGoToE.csv  ActionGoToR.csv  ActionHide.csv  ActionRendition.csv  ActionResetForm.csv  ActionRichMediaExecute.csv  ActionThread.csv  ActionTransition.csv  ActionURI.csv  AddActionCatalog.csv  AlternateImage.csv  AnnotHighlight.csv  AnnotLine.csv  AnnotMovie.csv  AnnotPopup.csv  AnnotPrinterMark.csv  AnnotProjection.csv  AnnotScreen.csv  AnnotStrikeOut.csv  AppearanceTrapNetSubDict.csv  ArrayOf3DView.csv  ArrayOfActions.csv  ArrayOfArrays.csv  ArrayOfDPartArrays.csv  ArrayOfDParts.csv  ArrayOfDecodeParams.csv  ArrayOfFields.csv  ArrayOfImageAlternates.csv  ArrayOfMediaPlayerInfo.csv  (+157 more)
pdf-dom/src/: DDL.hs  HTML.hs  Main.hs  Utils.hs
pdf-driver/: .gitignore  CHANGELOG.md  ISSUES.md  README.rst  Setup.hs  pdf-driver.cabal
pdf-driver/generator/: Main.hs
pdf-driver/pdf-test-generation/: DomExamples.hs  DomRender.hs  Main.hs  README  Utils.hs
pdf-driver/pre-dom-specification/: README.md  pre-dom.tex
pdf-driver/scripts/: build  get-pdf-corpora.sh  get-pdf-tests  pdf-driver-test.sh  populate-and-link-indirect-corpora.sh  run-test  run-tests
pdf-driver/spec/: CMap.ddl  ContentStreamLight.ddl  GenPdfValue.ddl  ISOCodes.ddl  Jpeg.ddl  JpegBasics.ddl  Map.ddl  Pair.ddl  PdfColourSpace.ddl  PdfContentStream.ddl  PdfCos.ddl  PdfCrypto.ddl  PdfDOM.ddl  PdfDecl.ddl  PdfDeclWJpeg.ddl  PdfDemo.ddl  PdfExtractText.ddl  PdfText.ddl  PdfValidate.ddl  PdfValue.ddl  PdfXRef.ddl  Stdlib.ddl  Sum.ddl  Unicode.ddl
pdf-driver/test/: .gitignore  Makefile  README.md  Shakefile.hs
rts-c/tests/: CMakeLists.txt  array_tests.cpp  bool_tests.cpp  comparisons.hpp  float_tests.cpp  maybe_tests.cpp  number_tests.cpp  size_tests.cpp  stream_tests.cpp  unit_tests.cpp
rts-hs/: rts-hs.cabal
rts-hs-data/: CHANGELOG.md  rts-hs-data.cabal
rts-hs/exe/: Main.hs  Midi.hs  Test.hs
rts-hs/src/: RTS.hs
rts-vm-hs/: CHANGELOG.md  rts-vm-hs.cabal
(+4244 files in other folders)
