cabal-version:       2.4
name:                daedalus
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
category:            Development
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto
  build-tool-depends:  alex:alex, happy:happy
  exposed-modules:     Daedalus.Parser.Tokens,
                       Daedalus.Parser.Monad,
                       Daedalus.Parser.Lexer,
                       Daedalus.Parser.Grammar,
                       Daedalus.Parser,
                       Daedalus.AST,
                       Daedalus.Module,
                       Daedalus.Scope,
                       Daedalus.ExportRuleRanges,
                       Daedalus.Interp,
                       Daedalus.Specialise,
                       Daedalus.CompileHS,
                       Daedalus.Compile.LangHS,
                       Daedalus.Compile.Config,
                       Daedalus.Driver,
                       Daedalus.Interp.Value,
                       Daedalus.Normalise.AST,
                       Daedalus.Normalise,
                       Daedalus.Type,
                       Daedalus.Type.AST,
                       Daedalus.Type.Monad,
                       Daedalus.Type.Constraints,
                       Daedalus.Type.Kind,
                       Daedalus.Type.Subst,
                       Daedalus.Type.Traverse,
                       Daedalus.Type.Free,
                       Daedalus.Type.DeadVal,
                       Daedalus.Specialise.Monad,
                       Daedalus.Specialise.PartialApply,
                       Daedalus.Specialise.Unify,
                       Daedalus.DDL2Core,
                       Daedalus.Rename,
                       Daedalus.PrettyError,
                       Daedalus.ParserGen,
                       Daedalus.ParserGen.AST,
                       Daedalus.ParserGen.Action,
                       Daedalus.ParserGen.Aut,
                       Daedalus.ParserGen.Utils,
                       Daedalus.ParserGen.Cfg,
                       Daedalus.ParserGen.Compile,
                       Daedalus.ParserGen.Det,
                       Daedalus.ParserGen.RunnerBias

  build-depends:       base,
                       array,
                       text >= 1.2.4,
                       bytestring,
                       containers,
                       vector,
                       pretty,
                       alex-tools >= 0.5,
                       GraphSCC,
                       filepath,
                       mtl,
                       monadLib,
                       panic,
                       parameterized-utils >= 2.0.1,
                       pretty-hex >= 1.1,
                       template-haskell >= 2.15,
                       ansi-terminal,
                       directory,
                       ghc-prim,
                       daedalus-utils,
                       daedalus-core,
                       daedalus-vm,
                       rts-hs


executable daedalus
  main-is:             Main.hs
  other-modules:       CommandLine

  build-depends:       daedalus,
                       daedalus-utils,
                       daedalus-vm,
                       rts-hs,
                       pretty-hex >= 1.1,
                       ansi-terminal,
                       base,
                       text >= 1.2.4,
                       simple-get-opt >= 0.4,
                       bytestring,
                       containers,
                       filepath

  hs-source-dirs:      exe
  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto
  default-language:    Haskell2010


test-suite daedalus-tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            RunUnitTests.hs
  default-language:    Haskell2010
  build-depends:      base,
                      filepath,
                      bytestring,
                      directory,
                      process,
                      process-extras,
                      simple-get-opt >= 0.4

