cabal-version:       2.4
name:                daedalus
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
category:            Development
extra-source-files:
  CHANGELOG.md
  exe/c-template/Makefile
  exe/c-template/Doxyfile
  exe/c-template/main.cpp
  exe/html-template/render.js
  exe/html-template/style.css
  exe/hs-template/Main.hs
  exe/hs-template/template.cabal
  rts-c/ddl/*.h

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    BlockArguments,
    OverloadedStrings,
    RecordWildCards

  ghc-options:         -Wall -O2  -Wno-incomplete-uni-patterns
  ghc-prof-options:    -fprof-auto
  build-tool-depends:  alex:alex, happy:happy
  exposed-modules:     Daedalus.Parser.Tokens,
                       Daedalus.Parser.Layout,
                       Daedalus.Parser.Monad,
                       Daedalus.Parser.Lexer,
                       Daedalus.Parser.Grammar,
                       Daedalus.Quote,
                       Daedalus.Parser,
                       Daedalus.AST,
                       Daedalus.Module,
                       Daedalus.Scope,
                       Daedalus.ExportRuleRanges,
                       Daedalus.Interp,
                       Daedalus.Specialise,
                       Daedalus.CompileHS,
                       Daedalus.Compile.LangHS,
                       Daedalus.Compile.Config,
                       Daedalus.Compile.ConfigParser,
                       Daedalus.Driver,
                       Daedalus.DriverHS,
                       Daedalus.Pass,
                       Daedalus.Type,
                       Daedalus.Type.Pretty,
                       Daedalus.Type.Generalize,
                       Daedalus.Type.InferContext,
                       Daedalus.Type.AST,
                       Daedalus.Type.Monad,
                       Daedalus.Type.Constraints,
                       Daedalus.Type.Kind,
                       Daedalus.Type.Subst,
                       Daedalus.Type.Traverse,
                       Daedalus.Type.Free,
                       Daedalus.Type.DeadVal,
                       Daedalus.Type.CheckUnused,
                       Daedalus.Type.RefreshGUID,
                       Daedalus.Type.NormalizeTypeVars,
                       Daedalus.Type.PatComplete,
                       Daedalus.Type.BitData,
                       Daedalus.Type.IP,
                       Daedalus.Specialise.Monad,
                       Daedalus.Specialise.PartialApply,
                       Daedalus.Specialise.Unify,
                       Daedalus.DDL2Core,
                       Daedalus.PrettyError,
                       Daedalus.ParserGen,
                       Daedalus.ParserGen.AST,
                       Daedalus.ParserGen.Action,
                       Daedalus.ParserGen.Aut,
                       Daedalus.ParserGen.Utils,
                       Daedalus.ParserGen.Cfg,
                       Daedalus.ParserGen.Compile,
                       Daedalus.ParserGen.LL,
                       Daedalus.ParserGen.LL.ClassInterval,
                       Daedalus.ParserGen.LL.Result,
                       Daedalus.ParserGen.LL.ParamLL,
                       Daedalus.ParserGen.LL.SlkCfg,
                       Daedalus.ParserGen.LL.Closure,
                       Daedalus.ParserGen.LL.DFAStep,
                       Daedalus.ParserGen.LL.DFA,
                       Daedalus.ParserGen.LL.LLA,
                       Daedalus.ParserGen.Runner,
                       Daedalus.ParserGen.Generate

  build-depends:       base,
                       array,
                       text >= 1.2.4,
                       bytestring,
                       containers,
                       vector,
                       pretty,
                       alex-tools >= 0.5.0.2,
                       GraphSCC,
                       filepath,
                       mtl,
                       monadLib >= 3.10.1,
                       panic,
                       parameterized-utils >= 2.0.1,
                       pretty-hex >= 1.1,
                       template-haskell >= 2.15,
                       ansi-terminal,
                       directory,
                       ghc-prim,
                       language-c,
                       daedalus-utils,
                       daedalus-core,
                       daedalus-vm,
                       daedalus-value,
                       rts-hs


executable daedalus
  main-is:             Main.hs
  other-modules:       CommandLine,
                       Templates

  build-depends:       daedalus,
                       daedalus-utils,
                       daedalus-core,
                       daedalus-value,
                       daedalus-vm,
                       rts-hs,
                       pretty-hex >= 1.1,
                       ansi-terminal,
                       base,
                       text >= 1.2.4,
                       simple-get-opt >= 0.4,
                       bytestring,
                       containers,
                       filepath,
                       directory,
                       pretty-show,
                       file-embed >= 0.0.13

  hs-source-dirs:      exe
  ghc-options:         -Wall -O2 -Wno-incomplete-uni-patterns
  ghc-prof-options:    -fprof-auto
  default-language:    Haskell2010
  default-extensions:
    BlockArguments,
    OverloadedStrings,
    RecordWildCards




executable daedalus-run-test
  hs-source-dirs:     tests
  main-is:            RunUnitTests.hs
  default-language:    Haskell2010
  build-depends:      base,
                      filepath,
                      bytestring,
                      directory,
                      process,
                      process-extras,
                      simple-get-opt >= 0.4


test-suite daedalus-tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            RunUnitTests.hs
  default-language:   Haskell2010
  build-depends:      base,
                      filepath,
                      bytestring,
                      directory,
                      process,
                      process-extras,
                      simple-get-opt >= 0.4

test-suite daedalus-test-backends
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test-all-ways
  main-is:            TestSuite.hs
  default-language:   Haskell2010
  build-depends:      base,
                      process,
                      directory

