cabal-version:       2.4
name:                daedalus
version:             1.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
category:            Development
extra-source-files:
  CHANGELOG.md
  exe/c-template/Makefile
  exe/c-template/Doxyfile
  exe/c-template/main.cpp
  exe/html-template/render.js
  exe/html-template/index.html
  exe/hs-template/Main.hs
  exe/hs-template/template.cabal
  exe/error-viewer-template/stringSet.js
  exe/error-viewer-template/tree.js
  exe/error-viewer-template/hex-view.js
  exe/error-viewer-template/error.js
  exe/error-viewer-template/scope.js
  exe/error-viewer-template/view.js
  exe/error-viewer-template/index.html
  exe/error-viewer-template/view.css
  rts-c/ddl/bitdata.h
  rts-c/ddl/bool.h
  rts-c/ddl/cast.h
  rts-c/ddl/debug.h
  rts-c/ddl/float.h
  rts-c/ddl/input.h
  rts-c/ddl/int.h
  rts-c/ddl/integer.h
  rts-c/ddl/json.h
  rts-c/ddl/maybe.h
  rts-c/ddl/number.h
  rts-c/ddl/owned.h
  rts-c/ddl/parse_error.h
  rts-c/ddl/size.h
  rts-c/ddl/stack.h
  rts-c/ddl/stream.h
  rts-c/ddl/unit.h
  rts-c/ddl/utils.h
  rts-c/ddl/value.h
  rts-c/ddl/exception.h
  rts-c/ddl/export.h
  rts-c/ddl/array.h
  rts-c/ddl/boxed.h
  rts-c/ddl/list.h
  rts-c/ddl/dex.h
  rts-c/ddl/map.h
  rts-c/ddl/parser.h
  rts-rust/Cargo.toml
  rts-rust/src/array.rs
  rts-rust/src/map.rs
  rts-rust/src/map_iterators.rs
  rts-rust/src/maybe.rs
  rts-rust/src/number.rs
  rts-rust/src/unit.rs
  rts-rust/src/user_defined.rs
  rts-rust/src/int.rs
  rts-rust/src/bitdata.rs
  rts-rust/src/lib.rs
  rts-rust/src/parser_state.rs
  rts-rust/src/test.rs
  rts-rust/src/ddl_box.rs
  rts-rust/src/input.rs
  rts-rust/src/builder.rs

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    BlockArguments,
    OverloadedStrings,
    RecordWildCards

  ghc-options:         -Wall -O2  -Wno-incomplete-uni-patterns
  ghc-prof-options:    -fprof-auto
  build-tool-depends:  alex:alex, happy:happy
  exposed-modules:     Daedalus.Parser.Tokens,
                       Daedalus.Parser.Layout,
                       Daedalus.Parser.Monad,
                       Daedalus.Parser.Lexer,
                       Daedalus.Parser.Grammar,
                       Daedalus.Quote,
                       Daedalus.Parser,
                       Daedalus.Parser.Unlit,
                       Daedalus.AST,
                       Daedalus.Module,
                       Daedalus.Scope,
                       Daedalus.Interp,
                       Daedalus.Interp.Operators,
                       Daedalus.Interp.DebugAnnot,
                       Daedalus.Interp.Error,
                       Daedalus.Interp.Env,
                       Daedalus.Interp.Loop,
                       Daedalus.Interp.Type,
                       Daedalus.Interp.ErrorTrie,
                       Daedalus.Interp.Config,
                       Daedalus.Specialise,
                       Daedalus.CompileHS,
                       Daedalus.Compile.LangHS,
                       Daedalus.Compile.Config,
                       Daedalus.Compile.ConfigParser,
                       Daedalus.Driver,
                       Daedalus.DriverHS,
                       Daedalus.TH.Compile,
                       Daedalus.Pass,
                       Daedalus.Type,
                       Daedalus.Type.Pretty,
                       Daedalus.Type.Generalize,
                       Daedalus.Type.InferContext,
                       Daedalus.Type.AST,
                       Daedalus.Type.Monad,
                       Daedalus.Type.Constraints,
                       Daedalus.Type.Kind,
                       Daedalus.Type.Subst,
                       Daedalus.Type.Traverse,
                       Daedalus.Type.Free,
                       Daedalus.Type.DeadVal,
                       Daedalus.Type.CheckUnused,
                       Daedalus.Type.RefreshGUID,
                       Daedalus.Type.NormalizeTypeVars,
                       Daedalus.Type.PatComplete,
                       Daedalus.Type.BitData,
                       Daedalus.Type.IP,
                       Daedalus.Specialise.Monad,
                       Daedalus.Specialise.PartialApply,
                       Daedalus.Specialise.Unify,
                       Daedalus.DDL2Core,
                       Daedalus.PrettyError,
                       Daedalus.ParserGen,
                       Daedalus.ParserGen.AST,
                       Daedalus.ParserGen.Action,
                       Daedalus.ParserGen.Aut,
                       Daedalus.ParserGen.Utils,
                       Daedalus.ParserGen.Cfg,
                       Daedalus.ParserGen.Compile,
                       Daedalus.ParserGen.LL,
                       Daedalus.ParserGen.LL.ClassInterval,
                       Daedalus.ParserGen.LL.Result,
                       Daedalus.ParserGen.LL.ParamLL,
                       Daedalus.ParserGen.LL.SlkCfg,
                       Daedalus.ParserGen.LL.Closure,
                       Daedalus.ParserGen.LL.DFAStep,
                       Daedalus.ParserGen.LL.DFA,
                       Daedalus.ParserGen.LL.LLA,
                       Daedalus.ParserGen.Runner
                       -- Daedalus.ParserGen.Generate

  build-depends:       base,
                       array,
                       text >= 1.2.4,
                       bytestring,
                       containers,
                       vector,
                       pretty,
                       alex-tools >= 0.6.1,
                       GraphSCC,
                       filepath,
                       mtl,
                       monadLib >= 3.10.1,
                       panic,
                       parameterized-utils >= 2.1.7,
                       pretty-hex >= 1.1,
                       template-haskell >= 2.15,
                       ansi-terminal,
                       directory,
                       ghc-prim,
                       daedalus-utils,
                       daedalus-core,
                       daedalus-vm,
                       daedalus-value,
                       rts-hs,
                       rts-hs-data


executable daedalus
  main-is:             Main.hs
  other-modules:       CommandLine,
                       Results,
                       Templates

  build-depends:       daedalus,
                       daedalus-utils,
                       daedalus-core,
                       daedalus-value,
                       daedalus-vm,
                       rts-hs,
                       rts-hs-data,
                       pretty-hex >= 1.1,
                       ansi-terminal,
                       base,
                       text >= 1.2.4,
                       simple-get-opt >= 0.5,
                       bytestring,
                       containers,
                       filepath,
                       directory,
                       pretty-show,
                       file-embed >= 0.0.13,
                       alex-tools

  hs-source-dirs:      exe
  ghc-options:         -Wall -O2 -Wno-incomplete-uni-patterns
  ghc-prof-options:    -fprof-auto
  default-language:    Haskell2010
  default-extensions:
    BlockArguments,
    OverloadedStrings,
    RecordWildCards


executable daedalus-run-test
  hs-source-dirs:     tests
  main-is:            RunUnitTests.hs
  default-language:    Haskell2010
  build-depends:      base,
                      filepath,
                      bytestring,
                      directory,
                      process,
                      process-extras,
                      simple-get-opt >= 0.4


test-suite daedalus-tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            RunUnitTests.hs
  default-language:   Haskell2010
  build-depends:      base,
                      filepath,
                      bytestring,
                      directory,
                      process,
                      process-extras,
                      simple-get-opt >= 0.4

test-suite daedalus-test-backends
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test-all-ways
  main-is:            TestSuite.hs
  default-language:   Haskell2010
  build-depends:      base,
                      process,
                      directory

test-suite daedalus-test-makefile
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test-with-make
  main-is:            TestSuite.hs
  default-language:   Haskell2010
  build-depends:      base,
                      process,
                      directory

