cabal-version:       >=1.10
name:                daedalus-core
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Daedalus.Core,
    Daedalus.Core.Basics,
    Daedalus.Core.Expr,
    Daedalus.Core.ByteSet,
    Daedalus.Core.Grammar,
    Daedalus.Core.Decl,
    Daedalus.Core.Type,
    Daedalus.Core.TypeCheck,
    Daedalus.Core.Free,
    Daedalus.Core.Effect,
    Daedalus.Core.Inline,
    Daedalus.Core.NoMatch,
    Daedalus.Core.Subst,
    Daedalus.Core.Normalize,
    Daedalus.Core.TraverseUserTypes,    
    Daedalus.Core.StripFail,
    Daedalus.Core.SpecialiseType,    
    Daedalus.Core.Semantics.Value,
    Daedalus.Core.Semantics.Env,
    Daedalus.Core.Semantics.Expr,
    Daedalus.Core.Semantics.Grammar,
    Daedalus.Core.Semantics.Decl

  build-depends:
    base >=4.13 && <4.15,
    bytestring,
    text,
    containers,
    vector,
    GraphSCC,
    parameterized-utils,
    bv-sized >= 1.0.1,
    rts-hs,
    monadLib,
    daedalus-utils
    
  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options: -Wall
