cabal-version:       >=1.10
name:                daedalus-core
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Daedalus.Core,
    Daedalus.Core.Basics,
    Daedalus.Core.Expr,
    Daedalus.Core.ByteSet,
    Daedalus.Core.Grammar,
    Daedalus.Core.Decl,
    Daedalus.Core.Type,
    Daedalus.Core.TypeCheck,
    Daedalus.Core.Free,
    Daedalus.Core.Effect,
    Daedalus.Core.Inline,
    Daedalus.Core.Determinize,
    Daedalus.Core.NoMatch,
    Daedalus.Core.NoLoop,
    Daedalus.Core.NoBitdata,
    Daedalus.Core.Subst,
    Daedalus.Core.Rename,
    Daedalus.Core.Normalize,
    Daedalus.Core.TraverseUserTypes,
    Daedalus.Core.StripFail,
    Daedalus.Core.ConstFold,
    Daedalus.Core.CheckFork,
    Daedalus.Core.SpecialiseType,
    Daedalus.Core.Bitdata,
    Daedalus.Core.TH.Names,
    Daedalus.Core.TH.Type,
    Daedalus.Core.TH.TypeDecls,
    Daedalus.Core.TH.Ops,
    Daedalus.Core.ShrinkBiasedOr,
    Daedalus.Core.InlineCase,
    Daedalus.Core.CFG,    
    Daedalus.Core.Semantics.Parser,
    Daedalus.Core.Semantics.Env,
    Daedalus.Core.Semantics.Expr,
    Daedalus.Core.Semantics.Grammar,
    Daedalus.Core.Semantics.Decl

  build-depends:
    base >=4.13 && <5,
    bytestring,
    text,
    containers,
    vector,
    deepseq,
    GraphSCC,
    parameterized-utils,
    bv-sized >= 1.0.1,
    rts-hs,
    rts-hs-data,
    rts-vm-hs,
    monadLib,
    template-haskell,
    th-abstraction,
    daedalus-utils,
    daedalus-value,
    transformers >= 0.5.6.2

  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options: -Wall
