cabal-version:       2.4
name:                daedalus-debug
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
category:            Development
extra-source-files:
  CHANGELOG.md

executable daedalus-debug
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base, text, bytestring, containers, alex-tools,
                      directory, filepath,
                      daedalus, rts-hs

