cabal-version:       >=1.10

name:                daedalus-utils
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Daedalus.PP,
    Daedalus.SourceRange,
    Daedalus.Rec,
    Daedalus.Range,
    Daedalus.Panic,
    Daedalus.BDD,
    Daedalus.GUID,
    Daedalus.TH,
    Daedalus.Time

  build-depends:
    base >=4.13 && <5,
    pretty,
    text,
    bytestring,
    containers,
    deepseq,
    GraphSCC,
    alex-tools,
    panic,
    template-haskell,
    monadLib,
    clock

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
