cabal-version:       >=1.10
name:                daedalus-value
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Daedalus.Value
    Daedalus.Value.Type
    Daedalus.Value.Arith
    Daedalus.Value.Compare
    Daedalus.Value.Bits
    Daedalus.Value.Bool
    Daedalus.Value.Array
    Daedalus.Value.Stream
    Daedalus.Value.Coerce
    Daedalus.Value.Utils

  build-depends:
    base,
    containers,
    bytestring,
    text,
    vector,
    daedalus-utils,
    rts-hs

  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
