cabal-version:       >=1.10

name:                daedalus-vm
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Daedalus.VM
    Daedalus.VM.BlockBuilder
    Daedalus.VM.InlineBlock
    Daedalus.VM.Compile.Monad
    Daedalus.VM.Compile.Grammar
    Daedalus.VM.Compile.Expr
    Daedalus.VM.Compile.Decl
    Daedalus.VM.CaptureAnalysis
    Daedalus.VM.Backend.C
    Daedalus.VM.Backend.C.Lang
    Daedalus.VM.Backend.C.Types
    Daedalus.VM.Backend.C.BorrowAnalysis

  build-depends:
    base >=4.13 && <4.14,
    containers,
    text,
    bytestring,
    pretty,
    daedalus-utils,
    daedalus-core

  hs-source-dirs:      src
  default-language:    Haskell2010
