cabal-version:       >=1.10

name:                daedalus-vm
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Daedalus.VM
    Daedalus.VM.BlockBuilder
    Daedalus.VM.InlineBlock
    Daedalus.VM.FreeVars
    Daedalus.VM.CaptureAnalysis
    Daedalus.VM.BorrowAnalysis
    Daedalus.VM.TypeRep
    Daedalus.VM.InsertCopy
    Daedalus.VM.RefCountSane
    Daedalus.VM.Compile.Monad
    Daedalus.VM.Compile.Grammar
    Daedalus.VM.Compile.Expr
    Daedalus.VM.Compile.Decl
    Daedalus.VM.GraphViz
    Daedalus.VM.Backend.C
    Daedalus.VM.Backend.C.Lang
    Daedalus.VM.Backend.C.Names
    Daedalus.VM.Backend.C.Types
    Daedalus.VM.Backend.C.UserDefined
    Daedalus.VM.Backend.C.Call

  build-depends:
    base >=4.13 && <4.15,
    containers,
    text,
    bytestring,
    pretty,
    daedalus-utils,
    daedalus-core

  ghc-options: -Wall

  hs-source-dirs:      src
  default-language:    Haskell2010
