cabal-version:      3.0
name:               export
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         diatchki@galois.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common settings
    ghc-options: -Wall
    default-extensions:
      BlockArguments
      ImportQualifiedPost
      DeriveTraversable
      TemplateHaskell
      OverloadedStrings
      ViewPatterns
      FlexibleInstances

executable export
    import:           settings
    main-is:          Main.hs
    other-modules:
      Options
      Name
      Check
      Subst
      AST
      Type
      Quote
      Lexer
      Parser
      ExportCPP
    build-depends:
      base, text, array, containers,
      pretty,
      alex-tools,
      simple-get-opt,
      daedalus, daedalus-core, daedalus-utils
    build-tool-depends:  alex:alex, happy:happy
    hs-source-dirs:   app
    default-language: Haskell2010
