cabal-version:      3.0
name:               hs-gen
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AST, PP
    default-extensions:
      BlockArguments, OverloadedStrings, ImportQualifiedPost
    build-depends:    base, text, pretty
    hs-source-dirs:   src
    default-language: Haskell2010
