cabal-version:       >=1.10

name:                icc-driver
version:             0.1.0.0
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
build-type:          Custom
extra-source-files:  CHANGELOG.md

custom-setup
  setup-depends: base, containers, daedalus, Cabal

executable icc-parser
  main-is: Main.hs
  other-modules: ICC
  hs-source-dirs: src
  build-depends:
    base >=4.13 && <4.15,
    bytestring,
    text,
    pretty-show,
    ansi-terminal,
    pretty-hex >= 1.1,
    rts-hs
  ghc-options: -Wall

  autogen-modules:
    ICC


