cabal-version:       3.0
name:                icc-tools
version:             0.1.0.0
synopsis:            This is a library for working with ICC documents
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           2021, Galois Inc
-- category:
build-type:          Custom
extra-source-files:
  spec/Daedalus.ddl
  spec/ICC.ddl

custom-setup
  setup-depends:
    base, containers, daedalus, directory, text, unix, filepath, Cabal

library
  default-language:     Haskell2010
  hs-source-dirs:       src, src/spec
  ghc-options:          -Wall

  exposed-modules:
    ICC
    PP

  other-modules:
    Daedalus

  autogen-modules:
    ICC
    Daedalus

  build-depends:
    base,
    bytestring,
    containers,
    pretty,
    rts-hs

executable icc
  default-language:     Haskell2010
  hs-source-dirs:       exe
  main-is:              Main.hs
  build-depends:
    base,
    pretty,
    rts-hs,
    icc-tools

